present: prevent K & L from wrapping

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -188,6 +188,7 @@ figure {
     padding: 0;
     line-height: 40px;
     font-family: $font-secondary;
+    white-space: nowrap;
   }
   a {
     padding: 5px 10px;
